# twitter_data

./: README.md  pyproject.toml  twitter_app.py
analysers/: twetts_analyser.py  twetts_searcher.py
cleaners/: twetts_cleaner.py
loaders/: twitts_loader.py
