[tool.poetry]
name = "twitter-data"
version = "0.1.0"
description = ""
authors = ["zdziebkowski <wojciech.zdziebkowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

